; ModuleID = '/home/carl/AnghaBench/linux/drivers/ntb/extr_msi.c_ntbm_msi_callback_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ntb/extr_msi.c_ntbm_msi_callback_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.ntb_msi_devres = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i8*)* @ntbm_msi_callback_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ntbm_msi_callback_release(%struct.device* %0, i8* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ntb_msi_devres*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ntb_msi_devres*
  store %struct.ntb_msi_devres* %7, %struct.ntb_msi_devres** %5, align 8
  %8 = load %struct.ntb_msi_devres*, %struct.ntb_msi_devres** %5, align 8
  %9 = getelementptr inbounds %struct.ntb_msi_devres, %struct.ntb_msi_devres* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i32* null, i32** %11, align 8
  %12 = load %struct.ntb_msi_devres*, %struct.ntb_msi_devres** %5, align 8
  %13 = getelementptr inbounds %struct.ntb_msi_devres, %struct.ntb_msi_devres* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32* null, i32** %15, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
